[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
bitvec = "1.0.1"
bitvector = "0.1.5"
itertools = "0.10.5"
pico-args = "0.5.0"
rustc-hash = "1.1.0"
